--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">RoutePlanner</string>
+    <string name="button_run_route_text">Run a route</string>
+    <string name="button_create_route_text">Create a new route</string>
+    <string name="button_route_overview_text">See your routes</string>
 </resources>
