--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,7 @@
 <resources>
     <string name="app_name">RoutePlanner</string>
+    <string name="RouteMainTitle"> <u>Main Title</u> </string>
+    <string name="RouteDistance"> Distance:  </string>
+    <string name="TimesRun"> Number of times Run: </string>
+    <string name="AverageSpeed"> Average speed: </string>
 </resources>
