Added PersonalStatisticsActivity and button leading to it

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,5 @@
     <string name="button_run_route_text">Run a route</string>
     <string name="button_create_route_text">Create a new route</string>
     <string name="button_route_overview_text">See your routes</string>
+    <string name="button_personal_statistics_text">Personal Statistics</string>
 </resources>
