--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,4 +10,7 @@
     <string name="button_personal_statistics_text">Personal Statistics</string>
     <string name="title_activity_maps">Map</string>
     <string name="google_maps_key">AIzaSyDvEnjyFXXOywEWQtggkoeGq8wQZwYAFYs</string>
+    <string name="totaldistance">TotalDistance</string>
+    <string name="overall_average_speed">Overall Average Speed</string>
+    <string name="totaltime">TotalTime</string>
 </resources>
