--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,6 +9,7 @@
     <string name="button_goto_route_overview_text">See your routes</string>
     <string name="button_goto_personal_statistics_text">Personal Statistics</string>
     <string name="button_create_route_text">Create route</string>
+    <string name="remove_last_marker_text">Undo marker</string>
     <string name="route_length">Length of route:</string>
     <string name="name_your_route">Name your route:</string>
     <string name="title_activity_maps">Map</string>
